# Blasteroids

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
src/core/: eventHandler.c  eventHandler.h  game.c  game.h  render.c  render.h
src/objects/: asteroid.c  asteroid.h  blast.c  blast.h  objects.h  spaceship.c  spaceship.h
src/utils/: common.c  common.h  config.c  config.h  logger.c  logger.h  logging.c  logging.h  settings.h
